# auth_api

./: .gitignore  Cargo.toml  get-tree.ps1  readme.md
authy/: Cargo.toml
authy/src/: main.rs
authy/src/models/: address.rs  user.rs
authy/src/repositories/: user_repository.rs
markdown/: 1_project_setup.md  3_compile_protos.md  part_1.md  part_2.md
proto_stub/: Cargo.toml  build.rs
proto_stub/proto/authy/protobuf/: main.proto
proto_stub/src/: lib.rs
