[workspace]

members = [
    "authy"
, "proto_stub", "security"]

[workspace.dependencies]

tokio = { version = "1.0", features = ["full"] }
tonic = "0.12.3"
tonic-reflection = "0.12.3"
tonic-build = "0.12.3"
prost = "0.13.3"
prost-types = "0.13.3"
jsonwebtoken = "9.3.0"
chrono = {  version = "0.4.38", features = ["serde"]}
serde = { version = "1.0.215", features = ["derive"] }